window edge header fixed globalclick fixed selectLimit now universal scrollbar stays and scroll doesn't work when context menu comes out

--- a/src/style.scss
+++ b/src/style.scss
@@ -91,12 +91,11 @@ $cell-font-size: 13px;
     &__headerSort{
         position: absolute;
         right: 4px;
-        top: 50%;
         margin-top: -10px;
-
+        bottom:50%;
         width: 20px;
         height: 20px;
-
+        transform: translateY(50%);
         & svg{
             fill: $header-font-color;
         }
@@ -113,7 +112,7 @@ $cell-font-size: 13px;
 
         cursor: col-resize;
         z-index: 1;
-        height: 100%;
+        height: 40px;
 
         transition: background 200ms ease-in-out;
 
@@ -137,6 +136,14 @@ $cell-font-size: 13px;
         overflow-y: auto;
         overflow-x: hidden;
         flex: 1;
+    }
+    &__content::-webkit-scrollbar{
+        width: 8px;
+    }
+    &__content::-webkit-scrollbar-thumb{
+        background: rgba(128, 128, 128, 0.29);
+        border-radius: 5px;
+        cursor: pointer;
     }
 
     &__contentRow{
@@ -167,6 +174,9 @@ $cell-font-size: 13px;
         padding-left: 10px;
         padding-right: 10px;
     }
+
+
+
 
 }
 
@@ -399,7 +409,7 @@ $cell-font-size: 13px;
     position: relative;
     border: 1px solid $border-color;
     border-radius: 2px;
-
+    padding: 2px 25px 2px 7px;
 
     &__select{
         height: 100%;
@@ -425,6 +435,28 @@ $cell-font-size: 13px;
         fill: #818B9E;
         z-index: 1;
     }
+
+    &__list{
+        position: absolute;
+        z-index: 20;
+        border-radius: 3px;
+        bottom: 0;
+        width: 100%;
+        left: 0;
+        background: white;
+        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+        box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    }
+    &__listItem{
+        padding: 2px 0 2px 7px;
+        &:hover{
+            cursor: default;
+            color: #262626;
+            text-decoration: none;
+            background-color: #f5f5f5;
+        }
+    }
+
 }
 
 // Info
